--- a/iSRB/iSRB/Base.lproj/Main.storyboard
+++ b/iSRB/iSRB/Base.lproj/Main.storyboard
@@ -682,7 +682,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="i2V-Yw-8Is"/>
+        <segue reference="pMr-CX-Ma0"/>
         <segue reference="wxC-rh-sHo"/>
     </inferredMetricsTieBreakers>
 </document>
